--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="profile">
       <div id="profile_img" style="background: url(https://avatars.githubusercontent.com/u/27277147?v=4) center;"></div>
       <div id="username"><span style="display:none;">null</span><a href="https://github.com/TimotheDavid">@TimotheDavid</a></div>
-      <div id="userbio">devloper full stack interest by API and serverless</div>
+      <div id="userbio">devloper full stack interested by API and serverless</div>
       <div id="about">
                 <span style="display:none;"><i class="fas fa-users"></i> &nbsp; null</span>
                 <span style="display:none;"><i class="fas fa-envelope"></i> &nbsp; null</span>
