--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                 <span style="display:none !important;"><a href="https://www.dribbble.com/undefined" target="_blank" class="socials"><i class="fab fa-dribbble"></i></a></span>
                 <span style="display:lock"><a href="https://www.linkedin.com/in/timothe-david/" target="_blank" class="socials"><i class="fab fa-linkedin-in"></i></a></span>
                 <span style="display:none !important;"><a href="https://www.medium.com/@undefined/" target="_blank" class="socials"><i class="fab fa-medium-m"></i></a></span>
-                </div>
+                <span style="display:lock"><a href="./CV_Timothe_David.pdf" target="_blank" class="socials"><i class="fas fa-paperclip"></i> CV</a></span>  
+              </div>
                 </div>
     </div>
     <div id="display">
