update the portofolio

--- a/index.html
+++ b/index.html
@@ -39,18 +39,6 @@
       <div id="work">
         <h1>Work.</h1>
         <div class="projects" id="work_section">
-                        <a href="https://mailthree-ce670.web.app/" target="_blank">
-                        <section>
-                            <div class="section_title">Mailthree-api</div>
-                            <div class="about_section">
-                            <span style="display:none;">undefined</span>
-                            </div>
-                            <div class="bottom_section">
-                                <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; NestJs</span>
-                                <p>https://mailthree-ce670.web.app/</p>
-                            </div>
-                        </section>
-                        </a>
                         <a href="https://kabanstud.timothedavid.fr/" target="_blank">
                         <section>
                             <div class="section_title">kabanStudent</div>
@@ -59,21 +47,8 @@
                             </div>
                             <div class="bottom_section">
                                 <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; Angular</span>
-                                <p>https://kabanstud.timothedavid.fr/</p>
                             </div>
                         </section>
-                        </a>
-                        <a href="https://github.com/TimotheDavid/api_dendo_php" target="_blank">
-                        <section>
-                            <div class="section_title">API dendo PHP</div>
-                            <div class="about_section">
-                            <span style="display:block;">project made for the end of the cs degree ( BTS SIO SLAM 2020)</span>
-                            </div>
-                            <div class="bottom_section">
-                                <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; PHP</span>
-                            </div>
-                        </section>
-                        </a>
                         <a href="https://monpetitrefuge.timothedavid.fr/" target="_blank">
                         <section>
                             <div class="section_title">mon petit refuge</div>
@@ -82,7 +57,6 @@
                             </div>
                             <div class="bottom_section">
                                 <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; JavaScript Vanilla</span>
-                                <p>https://monpetitrefuge.timothedavid.fr/</p>
                             </div>
                         </section>
                         </a>
@@ -97,6 +71,17 @@
                             </div>
                         </section>
                         </a>
+                        <a href="http://synco-doc.timothedavid.fr" target="_blank">
+                          <section>
+                              <div class="section_title">Synco</div>
+                              <div class="about_section">
+                              <span>Synco Stateless API for url shortner and more</span>
+                              </div>
+                              <div class="bottom_section">
+                                  <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; JAVA</span>
+                              </div>
+                          </section>
+                          </a>
                         </div>
       </div>
       <div id="forks" style="display:none;">
